--- a/openstack_dashboard/static/dashboard/scss/components/_login.scss
+++ b/openstack_dashboard/static/dashboard/scss/components/_login.scss
@@ -3,19 +3,22 @@
  */
 
 .login {
-  margin-top: $navbar-height*2;
-  background: url(/static/dashboard/img/background.png);
-  background-size: cover;
+  width:100%;
+  height:100%;
+  background: url(/static/dashboard/img/background.png) no-repeat;
+  background-size:cover;
 
   .splash-logo {
     margin: $padding-large-horizontal $padding-large-vertical;
-    max-width: 65%;
+    max-width: 50%;
   }
 
   .bg_login {
-    background: url(/static/dashboard/img/background.png);
-    background-size: cover;
-  }
+  width:100%;
+  height:100%;
+  background: url(/static/dashboard/img/background.png) no-repeat;
+  background-size:cover;
+}
 
   .help_text {
     display: none;
